trying to fix right alignment with search field for mobile

--- a/css/gumby.css
+++ b/css/gumby.css
@@ -1699,7 +1699,7 @@ table.rounded thead th, table.rounded thead td, table.rounded caption + tbody tr
   .about-box { /*margin: 2rem 2em!important;*/ }
   .about-box p { font-size: .9rem; line-height: 1.3rem; }
   .about-box h1 { font-size: 1.5rem; line-height: 1.6rem; margin-bottom: .5rem; } }
-@media only screen and (max-width: 767px) { div.cartodb-searchbox { width: 275px; height: 30px; top: 5px !important; margin: 0px; } }
+@media only screen and (max-width: 767px) { div.cartodb-searchbox { width: 265px; height: 30px; top: 5px !important; margin: 0px; } }
 @media only screen and (max-width: 320px) { div.cartodb-searchbox { left: 0rem !important; right: 0.5rem !important; } }
 @media only screen and (min-width: 321px) and (max-width: 767px) { div.cartodb-searchbox { right: 1rem !important; } }
 @media only screen and (max-width: 320px) { div.cartodb-searchbox.mobile { float: none !important; height: 30px; top: 5px !important; left: 0.5rem !important; right: 0rem !important; margin: 0px; } }
